fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   background: #f5f6fb;
+  overflow: auto;
 }
 body {
   overflow-x: hidden;
